--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
 .task-label {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .task-wrapper{
   display: flex;
@@ -118,7 +118,7 @@
   width: 226px;
 }
 .task-element {
-  width: 226px
+  width: 226px;
 }
 .task-delete-img {
   height: 2em;
@@ -131,18 +131,18 @@
 
 /* Completed */
 #completed-tasks .task-label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .task-element{
-  display: none
+  display: none;
 }
 
 .edit-mode .task-element {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .edit-mode .task-label {
